--- a/public/index.html
+++ b/public/index.html
@@ -1,9 +1,31 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title></title>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous">
+    </script>
+    <title>Priorities</title>
   </head>
-  <body>
-    <p>Hello World!</p>
+  <body class="container">
+    <div class="row" id="login">
+      <div class="col-xs-12 col-sm-8 col-sm-offset-2 col-md-6 col-md-offset-3 col-lg-4 col-lg-offset-4">
+        <h1 class="text-center text-info">Login</h1>
+      </div>
+    </div>
+    <div class="row" id="signup">
+        <div class="col-xs-12 col-sm-8 col-sm-offset-2 col-md-6 col-md-offset-3 col-lg-4 col-lg-offset-4">
+          <h1 class="text-center text-info">Sign-Up</h1>
+        </div>
+    </div>
+    <div class="row" id="homepage">
+      <div class="col-xs-12 col-sm-8 col-sm-offset-2 col-md-6 col-md-offset-3 col-lg-4 col-lg-offset-4">
+        <h1 class="text-center text-info">Home Page</h1>
+      </div>
+    </div>
+    <div class="row" id="progresspage">
+      <div class="col-xs-12 col-sm-8 col-sm-offset-2 col-md-6 col-md-offset-3 col-lg-4 col-lg-offset-4">
+        <h1 class="text-center text-info">Progress Page</h1>
+      </div>
+    </div>
   </body>
 </html>
