--- a/public/index.html
+++ b/public/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <script src="https://code.jquery.com/jquery-3.2.1.min.js"
     integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
     crossorigin="anonymous"></script>
@@ -14,11 +15,52 @@
     <div class="row" id="login">
       <div class="col-xs-12 col-sm-8 col-sm-offset-2 col-md-6 col-md-offset-3 col-lg-4 col-lg-offset-4">
         <h1 class="text-center text-info">Login</h1>
+        <form>
+          <div class="form-group">
+            <label for="email">Email address</label>
+            <input type="email" class="form-control" id="email" placeholder="Email" required>
+          </div>
+          <div class="form-group">
+            <label for="password">Password</label>
+            <input type="password" class="form-control" id="password" placeholder="Password" required>
+          </div>
+          <button type="submit" class="btn btn-primary pull-right">Submit</button>
+        </form>
+        <div class="row clearfix">
+          
+          <button type="button" id="great" class="btn btn-link">Click here to sign-up!</button>
+        </div>
       </div>
     </div>
     <div class="row" id="signup">
         <div class="col-xs-12 col-sm-8 col-sm-offset-2 col-md-6 col-md-offset-3 col-lg-4 col-lg-offset-4">
           <h1 class="text-center text-info">Sign-Up</h1>
+          <form>
+            <div class="form-group">
+              <div class="form-inline text-center">
+
+                <input class="form-control" name="firstname" placeholder="First Name" type="text" required autofocus />
+                <input class="form-control" name="lastname" placeholder="Last Name" type="text" required />
+              </div>
+            </div>
+            <div class="form-group">
+              <input class="form-control" name="youremail" placeholder="Your Email" type="email" />
+            </div>
+            <div class="form-group">
+              <input class="form-control" name="youremail" placeholder="Your Email" type="email" />
+            </div>
+            <div class="form-group">
+              <input class="form-control" name="reenteremail" placeholder="Re-enter Email" type="email" />
+            </div>
+            <div class="form-group">
+              <input class="form-control" name="password" placeholder="New Password" type="password" />
+            </div>
+            <div class="form-group">
+              <input class="form-control" name="reenterpassword" placeholder="Re-enter Password" type="password"/>
+            </div>
+            <button class="btn btn-lg btn-primary btn-block" type="submit">
+                Submit</button>
+            </form>
         </div>
     </div>
     <div class="row" id="homepage">
