--- a/public/index.html
+++ b/public/index.html
@@ -24,54 +24,102 @@
             <label for="password">Password</label>
             <input type="password" class="form-control" id="password" placeholder="Password" required>
           </div>
-          <button type="submit" class="btn btn-primary pull-right">Submit</button>
+          <button type="submit" id="homepage-button" class="btn btn-primary pull-right">Submit</button>
         </form>
         <div class="row clearfix">
           
-          <button type="button" id="great" class="btn btn-link">Click here to sign-up!</button>
+          <button type="button" id="sign-up-button" class="btn btn-link">Click here to sign-up!</button>
         </div>
       </div>
     </div>
     <div class="row" id="signup">
-        <div class="col-xs-12 col-sm-8 col-sm-offset-2 col-md-6 col-md-offset-3 col-lg-4 col-lg-offset-4">
-          <h1 class="text-center text-info">Sign-Up</h1>
-          <form>
-            <div class="form-group">
-              <div class="form-inline text-center">
+      <div class="col-xs-12 col-sm-8 col-sm-offset-2 col-md-6 col-md-offset-3 col-lg-4 col-lg-offset-4">
+        <h1 class="text-center text-info">Sign-Up</h1>
+        <form>
+          <div class="form-group">
+            <div class="form-inline text-center">
 
-                <input class="form-control" name="firstname" placeholder="First Name" type="text" required autofocus />
-                <input class="form-control" name="lastname" placeholder="Last Name" type="text" required />
-              </div>
+              <input class="form-control" name="firstname" placeholder="First Name" type="text" required autofocus />
+              <input class="form-control" name="lastname" placeholder="Last Name" type="text" required />
             </div>
-            <div class="form-group">
-              <input class="form-control" name="youremail" placeholder="Your Email" type="email" />
-            </div>
-            <div class="form-group">
-              <input class="form-control" name="youremail" placeholder="Your Email" type="email" />
-            </div>
-            <div class="form-group">
-              <input class="form-control" name="reenteremail" placeholder="Re-enter Email" type="email" />
-            </div>
-            <div class="form-group">
-              <input class="form-control" name="password" placeholder="New Password" type="password" />
-            </div>
-            <div class="form-group">
-              <input class="form-control" name="reenterpassword" placeholder="Re-enter Password" type="password"/>
-            </div>
-            <button class="btn btn-lg btn-primary btn-block" type="submit">
-                Submit</button>
-            </form>
+          </div>
+          <div class="form-group">
+            <input class="form-control" name="youremail" placeholder="Your Email" type="email" />
+          </div>
+          <div class="form-group">
+            <input class="form-control" name="reenteremail" placeholder="Re-enter Email" type="email" />
+          </div>
+          <div class="form-group">
+            <input class="form-control" name="password" placeholder="New Password" type="password" />
+          </div>
+          <div class="form-group">
+            <input class="form-control" name="reenterpassword" placeholder="Re-enter Password" type="password"/>
+          </div>
+          <button class="btn btn-lg btn-primary btn-block" type="submit">
+              Submit</button>
+        </form>
+        <div class="row clearfix">
+          <button type="button" id="login-button" class="btn btn-link">Already a member? Click here to login!</button>
         </div>
+      </div>
     </div>
     <div class="row" id="homepage">
-      <div class="col-xs-12 col-sm-8 col-sm-offset-2 col-md-6 col-md-offset-3 col-lg-4 col-lg-offset-4">
-        <h1 class="text-center text-info">Home Page</h1>
+      <nav class="navbar navbar-default">
+        <div class="container-fluid">
+          <!-- Brand and toggle get grouped for better mobile display -->
+          <div class="navbar-header">
+            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+              <span class="sr-only">Toggle navigation</span>
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>
+            </button>
+            <a class="navbar-brand" href="#">Brand</a>
+          </div>
+
+          <!-- Collect the nav links, forms, and other content for toggling -->
+          <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+            <ul class="nav navbar-nav">
+              <li class="active"><a href="#">Home<span class="sr-only">(current)</span></a></li>
+              <li><a href="#" id="progress-button">Progress</a></li>
+            </ul>
+            <ul class="nav navbar-nav navbar-right">
+              <li><a href="#" id="logout-button">Logout</a></li>
+            </ul>
+          </div><!-- /.navbar-collapse -->
+        </div><!-- /.container-fluid -->
+      </nav>
+      <div class="col-md-5">
+        <input type="text" class="form-control" placeholder="Enter your most important goal for the day.">
       </div>
     </div>
     <div class="row" id="progresspage">
-      <div class="col-xs-12 col-sm-8 col-sm-offset-2 col-md-6 col-md-offset-3 col-lg-4 col-lg-offset-4">
-        <h1 class="text-center text-info">Progress Page</h1>
-      </div>
+      <nav class="navbar navbar-default">
+        <div class="container-fluid">
+          <!-- Brand and toggle get grouped for better mobile display -->
+          <div class="navbar-header">
+            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+              <span class="sr-only">Toggle navigation</span>
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>
+            </button>
+            <a class="navbar-brand" href="#">Brand</a>
+          </div>
+
+          <!-- Collect the nav links, forms, and other content for toggling -->
+          <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+            <ul class="nav navbar-nav">
+              <li><a href="#" id="homenav-button">Home<span class="sr-only">(current)</span></a></li>
+              <li class="active"><a href="#" id="progress-button">Progress</a></li>
+            </ul>
+            <ul class="nav navbar-nav navbar-right">
+              <li><a href="#" id="logout-button">Logout</a></li>
+            </ul>
+          </div><!-- /.navbar-collapse -->
+        </div><!-- /.container-fluid -->
+      </nav>
+      <h1 class="text-center text-info">Progress Page</h1>
     </div>
   </body>
 </html>
