--- a/public/index.html
+++ b/public/index.html
@@ -15,7 +15,7 @@
     <div class="row" id="login">
       <div class="col-xs-12 col-sm-8 col-sm-offset-2 col-md-6 col-md-offset-3 col-lg-4 col-lg-offset-4">
         <h1 class="text-center text-info">Login</h1>
-        <form>
+        <form novalidate>
           <div class="form-group">
             <label for="email">Email address</label>
             <input type="email" class="form-control" id="email" placeholder="Email" required>
