When goal deleted, goal submission form now displays

--- a/public/index.html
+++ b/public/index.html
@@ -93,7 +93,7 @@
           </div><!-- /.navbar-collapse -->
         </div><!-- /.container-fluid -->
       </nav>
-
+      <div id="goal-submission-form"></div>
       <form id="set-goal" role="form">
         <div class="row">
           <div class="col-md-8">
