--- a/public/index.html
+++ b/public/index.html
@@ -8,8 +8,10 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous">
     </script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.4.0/Chart.min.js"></script>
     <script type="text/javascript" src="client.js"></script>
     <script type="text/javascript" src="app.js"></script>
+    <link rel="stylesheet" href="main.css">
     <title>Priorities</title>
   </head>
   <body class="container">
@@ -78,7 +80,7 @@
               <span class="icon-bar"></span>
               <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="#">Brand</a>
+            <a class="navbar-brand" href="#">RightOfWay</a>
           </div>
 
           <!-- Collect the nav links, forms, and other content for toggling -->
@@ -96,7 +98,7 @@
       <div id="goal-submission-form"></div>
       <form id="set-goal" role="form">
         <div class="row">
-          <div class="col-md-8">
+          <div class="col-sm-8 col-sm-offset-2">
             <div class="input-group input-group-lg">
               <input type="text" class="form-control" id="goal-text" placeholder="Enter your most important goal for the day." required>
               <div class="input-group-btn">
@@ -120,7 +122,7 @@
               <span class="icon-bar"></span>
               <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="#">Brand</a>
+            <a class="navbar-brand" href="#">RightOfWay</a>
           </div>
 
           <!-- Collect the nav links, forms, and other content for toggling -->
@@ -137,7 +139,7 @@
       </nav>
       <h3 class="text-center text-info">Here are some stats on your priority completion performance:</h3>
       <div id="progressStats"></div>
-
+      <canvas id="myChart" width="600" height="600"></canvas>
     </div>
   </body>
 </html>
