--- a/public/index.html
+++ b/public/index.html
@@ -43,21 +43,15 @@
           <div class="form-group">
             <div class="form-inline text-center">
 
-              <input class="form-control" name="firstname" placeholder="First Name" type="text" required autofocus />
-              <input class="form-control" name="lastname" placeholder="Last Name" type="text" required />
+              <input id="firstName" class="form-control" name="firstname" placeholder="First Name" type="text" required autofocus />
+              <input id="lastName" class="form-control" name="lastname" placeholder="Last Name" type="text" required />
             </div>
           </div>
           <div class="form-group">
-            <input class="form-control" name="youremail" placeholder="Your Email" type="email" />
+            <input id="new-username" class="form-control" name="username" placeholder="Your Username" type="text" required />
           </div>
           <div class="form-group">
-            <input class="form-control" name="reenteremail" placeholder="Re-enter Email" type="email" />
-          </div>
-          <div class="form-group">
-            <input class="form-control" name="password" placeholder="New Password" type="password" />
-          </div>
-          <div class="form-group">
-            <input class="form-control" name="reenterpassword" placeholder="Re-enter Password" type="password"/>
+            <input id="new-password" class="form-control" name="password" placeholder="New Password" type="password" />
           </div>
           <button class="btn btn-lg btn-primary btn-block" type="submit">Submit</button>
         </form>
