--- a/public/index.html
+++ b/public/index.html
@@ -21,8 +21,8 @@
         <h1 class="text-center text-info">Login</h1>
         <form id="login-form" novalidate>
           <div class="form-group">
-            <label for="email">Email address</label>
-            <input type="email" class="form-control" id="email" placeholder="Email" required>
+            <label for="username">Username</label>
+            <input type="text" class="form-control" id="username" placeholder="Username" required>
           </div>
           <div class="form-group">
             <label for="password">Password</label>
@@ -51,7 +51,7 @@
             <input id="new-username" class="form-control" name="username" placeholder="Your Username" type="text" required />
           </div>
           <div class="form-group">
-            <input id="new-password" class="form-control" name="password" placeholder="New Password" type="password" />
+            <input id="new-password" class="form-control" name="password" placeholder="New Password" type="password" required />
           </div>
           <button class="btn btn-lg btn-primary btn-block" type="submit">Submit</button>
         </form>
