--- a/public/index.html
+++ b/public/index.html
@@ -19,9 +19,10 @@
 
     <div class="row" id="login">
       <h1 class="text-center text-primary">RightOfWay&nbsp;<span class="fa fa-arrow-right"></span></h1>
-      <div class="col-md-8 col-md-offset-2 col-lg-6 col-lg-offset-3" id="loginContainer">
-        <div class="col-xs-12 col-sm-8 col-sm-offset-2 col-md-6 col-md-offset-3 col-lg-8 col-lg-offset-2" id="loginData">
-          <h4 class="text-center welcomeMessage" >Welcome to your priority tracker! RightOfWay steers you away from productive procrastination by providing a daily to-do-list that allows for only one item, your most important goal.</h4>
+      <div class="col-xs-12 col-sm-10 col-sm-offset-1 col-md-8 col-md-offset-2 col-lg-6 col-lg-offset-3" id="loginContainer">
+        <div class="col-xs-10 col-xs-offset-1 col-sm-8 col-sm-offset-2 col-md-6 col-md-offset-3 col-lg-8 col-lg-offset-2" id="loginData">
+          <h3 class="text-center welcomeColor">Welcome to your priority tracker!</h3> 
+          <h4 class="text-center welcomeMessage">RightOfWay steers you away from productive procrastination by providing a daily to-do-list that allows for only one item, your most important goal.</h4>
           <form id="login-form" novalidate>
             <div class="form-group">
               <label for="username">Username</label>
@@ -42,8 +43,8 @@
 
     <div class="row" id="signup">
       <h1 class="text-center text-primary">RightOfWay&nbsp;<span class="fa fa-arrow-right"></span></h1>
-      <div class="col-md-8 col-md-offset-2 col-lg-6 col-lg-offset-3" id="signupContainer">
-        <div class="col-xs-12 col-sm-8 col-sm-offset-2 col-md-6 col-md-offset-3 col-lg-8 col-lg-offset-2">
+      <div class="col-xs-12 col-sm-10 col-sm-offset-1 col-md-8 col-md-offset-2 col-lg-6 col-lg-offset-3" id="signupContainer">
+        <div class="col-xs-10 col-xs-offset-1 col-sm-8 col-sm-offset-2 col-md-6 col-md-offset-3 col-lg-8 col-lg-offset-2">
           <form id="signup-form">
             <div class="form-group">
               <label for="firstName">First Name</label>
@@ -119,7 +120,7 @@
         <div class="container-fluid">
           <!-- Brand and toggle get grouped for better mobile display -->
           <div class="navbar-header">
-            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-2" aria-expanded="false">
               <span class="sr-only">Toggle navigation</span>
               <span class="icon-bar"></span>
               <span class="icon-bar"></span>
@@ -129,7 +130,7 @@
           </div>
 
           <!-- Collect the nav links, forms, and other content for toggling -->
-          <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+          <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-2">
             <ul class="nav navbar-nav">
               <li><a href="#" id="homenav-button">Home<span class="sr-only">(current)</span></a></li>
               <li class="active"><a href="#" class="progress-button">Progress</a></li>
@@ -141,7 +142,7 @@
         </div><!-- /.container-fluid -->
       </nav>
       <div id="progressStats"></div>
-      <canvas id="myChart" width="450" height="450"></canvas>
+      <canvas id="myChart"></canvas>
     </div>
   </body>
 </html>
