--- a/public/index.html
+++ b/public/index.html
@@ -15,12 +15,12 @@
     <link rel="stylesheet" href="main.css">
     <link rel="shortcut icon" href="/favicon.ico">
     <link rel="icon" sizes="16x16 32x32 64x64" href="/favicon.ico">
-    <link rel="icon" type="image/png" sizes="196x196" href="/favicon-192.png">
-    <link rel="icon" type="image/png" sizes="160x160" href="/favicon-160.png">
-    <link rel="icon" type="image/png" sizes="96x96" href="/favicon-96.png">
-    <link rel="icon" type="image/png" sizes="64x64" href="/favicon-64.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16.png">
+    <link rel="icon" type="image/png" sizes="196x196" href="/faviconit/favicon-192.png">
+    <link rel="icon" type="image/png" sizes="160x160" href="/faviconit/favicon-160.png">
+    <link rel="icon" type="image/png" sizes="96x96" href="/faviconit/favicon-96.png">
+    <link rel="icon" type="image/png" sizes="64x64" href="/faviconit/favicon-64.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/faviconit/favicon-32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/faviconit/favicon-16.png">
     <title>Priorities</title>
   </head>
   <body class="container">
